--- a/wercker.yml
+++ b/wercker.yml
@@ -8,6 +8,7 @@ build:
     - script:
         name: copy files to wercker output
         code: |
+          if [ ! -d ${WERCKER_OUTPUT_DIR} ];then mkdir -p ${WERCKER_OUTPUT_DIR};fi
           cp -R ./ ${WERCKER_OUTPUT_DIR}
 deploy:
   steps:
